# Adafruit_CircuitPython_HID

./: pyproject.toml  requirements.txt
adafruit_hid/: __init__.py  consumer_control.py  consumer_control_code.py  digitizer.py  gamepad.py  keyboard.py  keycode.py  mouse.py
