# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "quax-circuitpython-hid"
description = "CircuitPython helper library for simulating HID devices."
version = "6.0.2.post1"
readme = "README.rst"
authors = [
    { name = "quaxalber", email = "pypi@quaxalber.de" },
    { name = "Adafruit Industries", email = "circuitpython@adafruit.com" },
]
urls = {Homepage = "https://github.com/quaxalber/Adafruit_CircuitPython_HID"}
keywords = [
    "adafruit",
    "hid",
    "human",
    "interface",
    "device",
    "keyboard",
    "mouse",
    "keycode",
    "keypadhardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["adafruit_hid"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
